[metadata]
description-file = README.md

[flake8]
per-file-ignores = hpecp/__init__.py:F401
    # Temporarily disable docstring violations
    hpecp/catalog.py:D101,D102,D100,D107,D105,D209,D400,D202,D205,D401,D200,D412	
    hpecp/config.py:D101,D102,D100,D107,D105,D209,D400,D202,D205,D401,D200,D412	
    hpecp/gateway.py:D101,D102,D100,D107,D105,D209,D400,D202,D205,D401,D200,D412	
    hpecp/logger.py:D101,D102,D100,D107,D105,D209,D400,D202,D205,D401,D200,D412	
    hpecp/lock.py:D101,D102,D100,D107,D105,D209,D400,D202,D205,D401,D200,D412	
    hpecp/k8s_cluster.py:D101,D102,D100,D107,D105,D209,D400,D202,D205,D401,D200,D412	
    hpecp/k8s_worker.py:D101,D102,D100,D107,D105,D209,D400,D202,D205,D401,D200,D412	
    hpecp/license.py:D101,D102,D100,D107,D105,D209,D400,D202,D205,D401,D200,D412	
    hpecp/exceptions.py:D101,D102,D100,D107,D105,D209,D400,D202,D205,D401,D200,D412	
    hpecp/user.py:D101,D102,D100,D107,D105,D209,D400,D202,D205,D401,D200,D412	
    hpecp/tenant.py:D101,D102,D100,D107,D105,D209,D400,D202,D205,D401,D200,D412
exclude = hpecp/role.py

[pycodestyle]
max-line-length = 79

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=79
    






